--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/manufacture_repair_main_a_dispo_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/manufacture_repair_main_a_dispo_notes.html
@@ -5,46 +5,152 @@
     </head>
 
 <body>
-    <div class="containter"> 
-        <div class="quote">
-            <h2>Safe Working Practices</h2>
-        </div>
-        <div class="content-wrapper">
-            <div class="portfolio-items-wrapper-notes_single">
+    <div class="containter">  
+        <div class="notes-content-wrapper">
+            <div class="notes-content-header" style="background-image:url(/images/PTST/PTST_note_marking_tools.jpg)" title="manufacturing background">
+                <h1 style="color:white"><u><b>Manufacture, Repair, Maintenance & Disposal</b></u></h1>
+            </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/materials_and_their_applications_notes.html">Materials and their applications</a>
-                        </div>
-                    </div>
+            <div class="notes-content">
+                <div class="notes-content-intro">
                 </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Classification of materials</a>
-                        </div>
-                    </div>
-                </div>
+                <h3 id="Manufacture"><b><u>Manufacturing processes:</b></u></h3>
+                <h3><ul>
+                        <li>Manufacturing efficiency is crucial for reducing costs and material waste.</li>
+                        <li>Modifications to product designs can simplify manufacturing and increase production speed.</li>
+                        <li>Fewer processes lead to lower energy consumption and less waste.</li>
+                    </ul></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Reducing the number of processes manufacturing time and cost.</li>
+                                <li>Minimises material waste.</li>
+                                <li>Improves product consistency.</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Requires careful planning and testing.</li>
+                                <li>May limit design flexibility.</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table><br>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Methods for investigating and testing materials</a>
-                        </div>
-                    </div>
-                </div>
+                <h3 id="Material_Choice"><b><u>Material Choice & Disposal:</b></u></h3>
+                <h3><ul>
+                        <li>The choice of materials affects the product’s durability, recyclability, and impact on the environment.</li>
+                        <li>Labelling materials correctly helps with efficient recycling.</li>
+                        <li>Designing products for easy disassembly improves sustainability and reduces landfill waste.</li>
+                    </ul></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Labels help with material separation for recycling.</li>
+                                <li>Disassembly-friendly designs aid end-of-life processing.</li>
+                                <li>Use of recyclable materials reduces environmental impact.</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Recycling infrastructure varies by region.</li>
+                                <li>Some eco-friendly materials have higher initial costs.</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table><br>
 
+                <h3 id="Sustainability"><b><u>Sustainability - The Six Rs:</b></u></h3>
+                <h3>
+                    <ul>
+                        <li>The six Rs help reduce environmental impact by guiding material use and disposal.</li>
+                        <li>Each principle aims to extend product life, reduce waste, and lower energy consumption.</li>
+                    </ul>
+                </h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Principle</th>
+                        <th>Description</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro"><b>Reduce</b></td>
+                        <td style="background-color: #e0e0e0;">Lower material usage, reduce waste and energy consumption.</td>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro"><b>Reuse</b></td>
+                        <td style="background-color: #e0e0e0;">Design for reusability of components and parts.</td>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro"><b>Rethink</b></td>
+                        <td style="background-color: #e0e0e0;">Choose sustainable materials and eco-friendly alternatives.</td>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro"><b>Recycle</b></td>
+                        <td style="background-color: #e0e0e0;">Ensure materials/components can be reprocessed for future use.</td>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro"><b>Repair</b></td>
+                        <td style="background-color: #e0e0e0;">Design products to be fixable rather than disposable, extending their lifespan.</td>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro"><b>Refuse</b></td>
+                        <td style="background-color: #e0e0e0;">Avoid using non-recyclable or environmentally harmful materials.</td>
+                    </tr>
+                </table><br>
+
+
+
+                <h3 id="Maintenance"><b><u>Maintenance:</b></u></h3>
+                <h3><ul>
+                        <li>Regular maintenance extends product life and reduces the need for replacements.</li>
+                        <li>Using standardised parts allows for easy repairs and servicing.</li>
+                        <li>Some products can be upgraded with software updates instead of being replaced.</li>
+                    </ul></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Extends product lifespan.</li>
+                                <li>Reduces electronic and material waste.</li>
+                                <li>Software updates can improve functionality.</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Requires standardised parts for compatibility.</li>
+                                <li>Some products are designed to be non-repairable.</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+
+                <h3><b>Topic test:</b></h3>
+
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="\documents\Q&A\processes_techniques_special_tools_exercises\&A.pdf">Manufacture & Sustainability Questions</a>
+                </div>
             </div>
         </div>
-
-        <script src="../../../../../../../footer.js"></script>
     </div>
+
+    <script src="/footer.js"></script>
+
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../../../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
