--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/metal_enhancement_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/metal_enhancement_notes.html
@@ -6,45 +6,104 @@
 
 <body>
     <div class="containter"> 
-        <div class="quote">
-            <h2>Safe Working Practices</h2>
-        </div>
-        <div class="content-wrapper">
-            <div class="portfolio-items-wrapper-notes_single">
+        <div class="notes-content-wrapper">
+            <div class="notes-content-header" style="background-image:url(/images/PTST/PTST_note_heattreatment.jpg)" title="heat treatment background">
+                <h1 style="color:white"><u><b>Metal Enhancement</b></u></h1>
+            </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/materials_and_their_applications_notes.html">Materials and their applications</a>
-                        </div>
-                    </div>
+            
+
+            <div class="notes-content">
+                <div class="notes-content-intro">
+                    <h2>The following page of notes will cover:</h2>
+                    <ul style="font-size: medium;">
+                        <li>Case hardening</li>
+                        <li>Hardening and tempering</li>
+                    </ul>
                 </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Classification of materials</a>
-                        </div>
-                    </div>
-                </div>
+                <h3 id="CaseHardening"><b><u>Case hardening:</b></u></h3>
+                <h3>
+                    <p><b>How it works:</b></p>
+                    <ul>
+                        <ol><li>Hardens the surface of steels with less than 0.4% carbon content</li>
+                        <li>Carburising: the metal is placed in a box packed with powdered carbon and heated to 930C for a period of time</li>
+                        <li>Carbon is then absorbed by the metal, the depth of absoprtion is determined by the length of time if carbursing </li>
+                        <li>The metal is then quenched in water which stops the carbon escaping the surface of the metal</li>
+                    </ul></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Greater hardness for outside surface</li>
+                                <li>Improved wear resistance</li>
+                                <li>Resistance to surface indedntations</li>
+                                <li>Low coefficient of friction</li>
+                                <li>Internal properties of metal remain unchanged</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Depth of hardness is not fully known</li>
+                                <li>Difficult to machine metal after process</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Firing pins in guns, rifle bolts, engine camshafts<br><br></h3>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Methods for investigating and testing materials</a>
-                        </div>
-                    </div>
-                </div>
 
+                <h3 id="HardeningandTempering"><b><u>Hardening and tempering:</b></u></h3>
+                <h3>
+                    <p><b>How it works:</b></p>
+                    <ul>
+                        <ol><li>Medium/High carbon steel is heated to a given temperature (below critical temperature) and held there for a period of time</li>
+                        <li>It is then dropped in water/oil (often called quenching)</li>
+                        <li>The metal has now been hardened which improves certain properties but makes the metal very brittle</li>
+                        <li>As a result the metal is reheated to a given temperature (below critical temperature) and allowed to cool slowly</li>
+                    </ul></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Improved tensile strength </li>
+                                <li>Very hard </li>
+                                <li>Reversible process (via annealing)</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Metal becomes less ductile</li>
+                                <li>Metal is more likely to crack/damage in worked area</li>
+                                <li>Metal becomes more brittle</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Screwdrivers, wrenches, hardened steel<br><br></h3>
+
+                
+
+                <h3><b>Topic test:</b></h3>
+
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="\documents\Q&A\processes_techniques_special_tools_exercises\Heat_treatments_Q&A.pdf">Metal Enhancement Questions</a>
+                </div> 
             </div>
         </div>
 
-        <script src="../../../../../../../footer.js"></script>
+        <script src="/footer.js"></script>
+
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../../../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
