--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/paper_a_board_finishing_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/paper_a_board_finishing_notes.html
@@ -4,47 +4,230 @@
         <script src="/head.js" defer></script>
     </head>
 
-<body>
-    <div class="containter"> 
-        <div class="quote">
-            <h2>Safe Working Practices</h2>
-        </div>
-        <div class="content-wrapper">
-            <div class="portfolio-items-wrapper-notes_single">
+    <body>
+        <div class="containter"> 
+            <div class="notes-content-wrapper">
+                <div class="notes-content-header" style="background-image:url(/images/PTST/PTST_note_heattreatment.jpg)" title="heat treatment background">
+                    <h1 style="color:white"><u><b>Paper and board finishing</b></u></h1>
+                </div>
+    
+                <div class="notes-content">
+                    <div class="notes-content-intro">
+                    </div>
+                    <h3 id="PaperLaminating"><b><u>Laminating:</b></u></h3>
+                <h3>
+                    <p><b>How it works:</b></p>
+                    <ul>
+                        <li>Coating the paper with liquid/film to protect it</li>
+                    </ul></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Aesthetic/high quality look</li>
+                                <li>Rigid/strengthens paper</li>
+                                <li>Low cost</li>
+                                <li>Hard to tear/rip</li>
+                            </ul
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Paper hard to access/write on</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Posters, pictures, song music<br><br></h3>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/materials_and_their_applications_notes.html">Materials and their applications</a>
+                <h3 id="Embossing"><b><u>Embossing:</b></u></h3>
+                <h3>
+
+                    <div class="notes-content-picture" >
+                        <img src="/images/notes_pages_images/embossing.png" alt="Diagram of shape dimensions">
+                    </div>
+                    <p><b>How it works:</b></p>
+                    <ul>
+                        <ol><li>The paper is placed between the two formers</li>
+                            <li>The formers then close around the paper to form the shape</li>
+                            <li>Formers can be heated/cold</li></ol>
+                    </ul></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>High quality finish</li>
+                                <li>Sophisticated appearance</li>
+                            </ul
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Expensive</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Toblerone card packaging, birthday cards<br><br></h3>
+                <h3><b>Debossing: </b>The same process but recessed surface<br><br></h3>
+
+                <h3 id="Varnishing"><b><u>Varnishing:</b></u></h3>
+                <h3>
+                    <p><b>How it works:</b></p>
+                    <ul>
+                        <li>Clear, non-pigmented ink used on pre-coated papers</li>
+                    </ul></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Enhances the colour of paper</li>
+                                <li>Protects against dirt/fingerprints</li>
+                            </ul
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Long dry time</li>
+                                <li>Slows down overall completion time - slower production rate</li>
+                                <li>Sticks to other surfaces/pages if not fully dried</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Brochures, magazines<br><br></h3>
+
+                <h3 id="UVVarnishing"><b><u>UV Varnishing:</b></u></h3>
+                <h3>
+                    <p><b>How it works:</b></p>
+                    <ul>
+                        <li>UV varnishing involves applying a clear varnish coating to paper or print products.</li>
+                        <li>The varnish is cured under ultraviolet (UV) light to create a glossy, protective finish.</li>
+                        <li>It can be applied over full or spot areas of a print.</li>
+                    </ul>
+                </h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Provides a high-gloss finish</li>
+                                <li>Quick drying time due to UV curing</li>
+                                <li>Enhances the appearance of printed products</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Can be expensive due to the equipment and energy needed</li>
+                                <li>Requires specialized UV curing equipment</li>
+                                <li>Can create a strong shine that may be unsuitable for some designs</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Business cards, brochures, packaging, high-end marketing materials<br><br></h3>
+
+                <h3 id="SpotVarnishing"><b><u>Spot Varnishing:</b></u></h3>
+                <h3>
+                    <p><b>How it works:</b></p>
+                    <ul>
+                        <li>Spot varnishing is a process where varnish is applied only to specific areas of a printed piece.</li>
+                        <li>This selective application enhances certain parts of the design, often adding contrast or emphasis.</li>
+                        <li>It is usually done after the printing process but before the final drying and cutting stages.</li>
+                    </ul>
+                </h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Highlights specific areas of a print, creating a visual effect</li>
+                                <li>Can be used for added texture or contrast in designs</li>
+                                <li>Quick drying time when using UV varnish</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Can be expensive due to additional processes</li>
+                                <li>Limited to certain design styles that require specific areas to be highlighted</li>
+                                <li>Requires precision to avoid overlapping the varnish</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Luxury packaging, high-end marketing materials, business cards, brochures<br><br></h3>
+
+
+
+                <h3 id="HotFoilBlocking"><b><u>Hot foil blocking:</b></u></h3>
+                <h3>
+
+                    <div class="notes-content-picture" >
+                        <img src="/images/notes_pages_images/hotfoilblocking.png" alt="Diagram of shape dimensions">
+                    </div>
+                    <p><b>How it works:</b></p>
+                    <ul>
+                        <ol><li>A foil sheet is place between the paper and the die</li>
+                            <li>The die is then pressed onto the foil and heated to allow the foil to join to the paper</li>
+                            <li>The die is then removed and the foil cools</li></ol>
+                    </ul></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Enhances/adds value to paper</li>
+                                <li>Improved aesthetics</li>
+                                <li>Range of colours/foils etc</li>
+                            </ul
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>If heated for too long the foil can bubble and melt</li>
+                                <li>If heated not long enough the foil will not stick</li>
+                                <li>Difficulty in reproducing tints and halftones</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses: </b>Passports, gold foil decorations, wedding invite cards<br><br></h3>
+
+                
+                    </h3>
+
+                    <div class="notes-content">
+                        <div class="notes-content-intro">
+<!-- 
+                            <h3><b>Topic test:</b></h3>
+
+                            This is a comment div class="blurbox" style="background-color: #bdbdbd;">
+                                <a href="\documents\Q&A\processes_techniques_special_tools_exercises\&A.pdf">Metal processes Questions</a>
+                            </div> -->
                         </div>
                     </div>
+
+                    <script src="/footer.js"></script>
+
                 </div>
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Classification of materials</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Methods for investigating and testing materials</a>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-
-        <script src="../../../../../../../footer.js"></script>
-    </div>
-    <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
-</body>
-<script src="../../../../../../../script.js"></script>
-</html>
+                <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
+            </body>
+        <script src="/script.js"></script>
+    </html>
