--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes.html
@@ -175,7 +175,7 @@
             </div>
         </div>
 
-        <script src="../../../../../footer.js"></script>
+        <script src="/footer.js"></script>
 
     </div>
 
@@ -186,5 +186,5 @@
     </style>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
