--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/materials_and_their_applications_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/materials_and_their_applications_notes.html
@@ -5,46 +5,186 @@
     </head>
 
 <body>
-    <div class="containter"> 
-        <div class="quote">
-            <h2>Safe Working Practices</h2>
-        </div>
-        <div class="content-wrapper">
-            <div class="portfolio-items-wrapper-notes_single">
+    <div class="containter">  
+        <div class="notes-content-wrapper">
+            <div class="notes-content-header" style="background-image:url(/images/matnotecharacteristics.jpg)" title="performance of materials background">
+                <h1 style="color:white"><u><b>Materials and their applications</b></u></h1>
+            </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Materials and their applications</a>
-                        </div>
-                    </div>
+            <div class="notes-content">
+                <div class="notes-content-intro">
+                    <h2>The following page of notes will cover:</h2>
+                    <ul style="font-size: medium;">
+                        <li>Physical characteristics (Physical properties)</li>
+                        <li>Mechanical characteristics (Mechanical properties / Working properties)</li>
+                        <li>Product function</li>
+                        <li>Aesthetics</li>
+                        <li>Cost</li>
+                        <li>Manufacture and disposal</li>
+                    </ul>
                 </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Classification of materials</a>
-                        </div>
-                    </div>
+                <div class="notes-content-subheader">
+                    <h2 id="Physicalcharacteristics"><hr>Physical characteristics<hr></h2>
                 </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Methods for investigating and testing materials</a>
-                        </div>
-                    </div>
+                <h3 id="Electricalconductivity"><b><u>Electrical conductivity:</b></u></h3>
+                <h3>The Property that lets <b style="color: rgb(185, 22, 22)">electrical current flow</b> through a material<br><br><br></h3>
+                <div class="notes-content-picture" >
+                    <img src="/images/notes_pages_images/pcom_images/pcom_conductivity.jpg" alt="Diagram of shape dimensions">
                 </div>
 
+                <h3 id="Thermalconductivity"><b><u>Thermal conductivity:</b></u></h3>
+                <h3>The Property that lets <b style="color: rgb(185, 22, 22)">thermal energy flow</b> through a material<br><br><br></h3>
+                <div class="notes-content-picture" >
+                    <img src="/images/notes_pages_images/pcom_images/pcom_conductivity.jpg" alt="Diagram of shape dimensions">
+                </div>
+
+                <h3 id="Biodegradability"><b><u>Biodegradability:</b></u></h3>
+                <h3>A material's ability to <b style="color: rgb(185, 22, 22)">break down over time</b> as a result of <b style="color: rgb(185, 22, 22)">biological activity</b> (being broken down by <b style="color: rgb(185, 22, 22)">microorganisms</b>)<br><br><br></h3>
+                <div class="notes-content-picture" >
+                    <img src="/images/notes_pages_images/pcom_images/pcm_biodegradability.png" alt="Diagram of shape dimensions">
+                </div>
+
+                <h3 id="Chemicalresistance"><b><u>Chemical resistance:</b></u></h3>
+                <h3>A material's ability to <b style="color: rgb(185, 22, 22)">withstand chemical attack</b> <b style="color: rgb(185, 22, 22)"></b> without being broken down<br></h3><br><br/>
+                
+
+                <h3 id="Corrosionresistance"><b><u>Corrosion resistance:</b></u></h3>
+                <h3>A material's ability to <b style="color: rgb(185, 22, 22)">withstand rusting from water</b> <b style="color: rgb(185, 22, 22)"></b> without being broken down<br></h3>
+                <br>
+
+                <div class="notes-content-subheader">
+                    <h2 id="Mechanicalproperties"><hr>Mechanical (Working) characteristics<hr></h2>
+                </div>
+
+                <h3 id="Strength"><b><u>Strength (Tensile, Compressive, Torsional, Shear, Bending):</b></u></h3>
+                <h3>The ability allowing a material to <b style="color: rgb(185, 22, 22)">resist forces</b> from all directions <b style="color: rgb(185, 22, 22)">(compressive, tensile, bending, shear, torsional).</b> <br><br><br></h3>
+                <div class="notes-content-picture" >
+                    <img src="/images/notes_pages_images/pcom_images/pcm_strength.png" alt="Diagram of shape dimensions">
+                </div>
+
+                <h3 id="Elasticity"><b><u>Elasticity:</b></u></h3>
+                <h3> The ability allowing an object or material to <b style="color: rgb(185, 22, 22)">reassume its normal shape</b> after being <b style="color: rgb(185, 22, 22)">stretched or compressed.</b><br><br><br></h3>
+                <div class="notes-content-picture" >
+                    <img src="/images/notes_pages_images/pcom_images/pcm_elasticity.png" alt="Diagram of shape dimensions">
+                </div>
+
+                <h3 id="Placticity"><b><u>Placticity:</b></u></h3>
+                <h3> A material's ability to be <b style="color: rgb(185, 22, 22)">permanently deformed</b> and <b style="color: rgb(185, 22, 22)">retain</b> its deformed shape<br><br><br></h3>
+                <div class="notes-content-picture" >
+                    <img src="/images/notes_pages_images/pcom_images/pcm_placticity.png" alt="Diagram of shape dimensions">
+                </div>
+
+                <h3 id="Malleability"><b><u>Malleability:</b></u></h3>
+                <h3>A materia's ability to be <b style="color: rgb(185, 22, 22)">deformed by compression without being torn / cracked.</b><br><br><br></h3>
+                <div class="notes-content-picture" >
+                    <img src="/images/notes_pages_images/pcom_images/pcm_malleability.png" alt="Diagram of shape dimensions">
+                </div>
+
+                <h3 id="Ductility"><b><u>Ductility:</b></u></h3>
+                <h3>The ability of a material to be <b style="color: rgb(185, 22, 22)">drawn/stretched out thin</b> (usually into <b style="color: rgb(185, 22, 22)">wires</b>)<br><br><br></h3>
+                <div class="notes-content-picture" >
+                    <img src="/images/notes_pages_images/pcom_images/pcm_ductility.png" alt="Diagram of shape dimensions">
+                </div>
+
+                <h3 id="Hardness"><b><u>Hardness:</b></u></h3>
+                <h3>A material's ability to <b style="color: rgb(185, 22, 22)">withstand indentation / abrasion / scratching.</b><br><br><br></h3>
+                <div class="notes-content-picture" >
+                    <img src="/images/notes_pages_images/pcom_images/pcm_hardness.png" alt="Diagram of shape dimensions">
+                </div>
+
+                <h3 id="Toughness"><b><u>Toughness:</b></u></h3>
+                <h3>A material's ability to <b style="color: rgb(185, 22, 22)">absorb impact force without fracture.</b><br><br><br></h3>
+                <div class="notes-content-picture" >
+                    <img src="/images/notes_pages_images/pcom_images/pcm_toughness.png" alt="Diagram of shape dimensions">
+                </div>
+
+                <h3 id="Durability"><b><u>Durability:</b></u></h3>
+                <h3>A material's ability to <b style="color: rgb(185, 22, 22)">withstand wear, pressure, and damage.</b> <br><br><br></h3>
+                <div class="notes-content-picture" >
+                    <img src="/images/notes_pages_images/pcom_images/pcm_durability.png" alt="Diagram of shape dimensions">
+                </div>
+
+                <div class="notes-content-subheader">
+                    <h2 id="Product_Design"><hr>Product Design Considerations<hr></h2>
+                </div>
+                <h3>
+                    <ul>
+                        <li>Good product design balances function, aesthetics, cost, and sustainability.</li>
+                        <li>Each factor affects usability, manufacturing efficiency, and environmental impact.</li>
+                    </ul>
+                </h3>
+
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Aspect</th>
+                        <th>Description</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro"><b>Product Function</b></td>
+                        <td style="background-color: #e0e0e0;">
+                            <ul>
+                                <li>Defines how well a product performs its intended task.</li>
+                                <li>Must be ergonomic and user-friendly.</li>
+                                <li>Should be durable and reliable to prevent frequent repairs.</li>
+                                <li>Consider safety features to minimise risks.</li>
+                                <li>Functionality can be enhanced through modularity (e.g., interchangeable parts).</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro"><b>Aesthetics</b></td>
+                        <td style="background-color: #e0e0e0;">
+                            <ul>
+                                <li>Focuses on how the product looks and feels.</li>
+                                <li>Colour, texture, and form impact customer perception.</li>
+                                <li>Trends and cultural influences affect aesthetic preferences.</li>
+                                <li>Design should balance form and function.</li>
+                                <li>Materials and finishes contribute to perceived quality.</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro"><b>Cost</b></td>
+                        <td style="background-color: #e0e0e0;">
+                            <ul>
+                                <li>Includes materials, labour, manufacturing, and distribution costs.</li>
+                                <li>Cost can be reduced by using standardised parts and efficient manufacturing.</li>
+                                <li>Minimising waste in production helps reduce expenses.</li>
+                                <li>Target market (luxury vs. budget-friendly) affects cost decisions.</li>
+                                <li>Balance cost and quality to maintain durability and affordability.</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro"><b>Manufacture & Disposal</b></td>
+                        <td style="background-color: #e0e0e0;">
+                            <ul>
+                                <li>Design for efficient manufacturing with minimal steps.</li>
+                                <li>Material selection impacts processing and sustainability.</li>
+                                <li>Use recyclable materials to promote eco-friendly disposal.</li>
+                                <li>Parts should be easy to separate for proper recycling.</li>
+                                <li>Reduce use of toxic or harmful substances.</li>
+                                <li>Consider end-of-life design (repair, repurpose, or upgrade instead of disposal).</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+
+
+                <h3><b>Topic test:</b></h3>
+
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="\documents\Q&A\pcom_exercises\Performance_characteristics_of_materials_Q&A.pdf">Performance Characteristics of Materials Questions</a>
+                </div>
             </div>
         </div>
 
-        <script src="../../../../../../../footer.js"></script>
+        <script src="/footer.js"></script>
+
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../../../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
