--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/paper_a_board_forming_processes_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/paper_a_board_forming_processes_notes.html
@@ -4,47 +4,158 @@
         <script src="/head.js" defer></script>
     </head>
 
-<body>
-    <div class="containter"> 
-        <div class="quote">
-            <h2>Safe Working Practices</h2>
-        </div>
-        <div class="content-wrapper">
-            <div class="portfolio-items-wrapper-notes_single">
+    <body>
+        <div class="containter"> 
+            <div class="notes-content-wrapper">
+                <div class="notes-content-header" style="background-image:url(/images/PTST/PTST_note_heattreatment.jpg)" title="heat treatment background">
+                    <h1 style="color:white"><u><b>Paper and board forming processes</b></u></h1>
+                </div>
+    
+                <div class="notes-content">
+                    <div class="notes-content-intro">
+                    </div>
+                    <h3 id="DieCutting"><b><u>Die Cutting:</b></u></h3>
+                    <h3>
+                        <p><b>How it works:</b></p>
+                        <ul>
+                            <li>Die cutting uses a sharp, custom-shaped die to cut through materials like paper, cardboard, or plastic.</li>
+                            <li>The die is pressed onto the material using a machine, cutting it into a specific shape.</li>
+                        </ul>
+                    </h3>
+                    <table>
+                        <tr class="notes-table-header">
+                            <th>Advantages</th>
+                            <th>Disadvantages</th>
+                        </tr>
+                        <tr>
+                            <td class="notes-table-data-pro">
+                                <ul>
+                                    <li>Accurate and precise cuts</li>
+                                    <li>Can cut through multiple layers at once</li>
+                                    <li>Ideal for high-volume production</li>
+                                </ul>
+                            </td>
+                            <td class="notes-table-data-con">
+                                <ul>
+                                    <li>Requires custom-made dies, which can be expensive</li>
+                                    <li>Not suitable for intricate designs or small runs</li>
+                                </ul>
+                            </td>
+                        </tr>
+                    </table>
+                    <h3><b>Uses: </b>Packaging, labels, paper products, and custom cutouts<br><br></h3>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/materials_and_their_applications_notes.html">Materials and their applications</a>
+                    <h3 id="LaserCutting"><b><u>Laser Cutting:</b></u></h3>
+                    <h3>
+                        <p><b>How it works:</b></p>
+                        <ul>
+                            <li>A focused laser beam melts, burns, or vaporizes the material to cut through it.</li>
+                            <li>Laser cutting is typically used for metals, plastics, wood, boards, and other materials.</li>
+                        </ul>
+                    </h3>
+                    <table>
+                        <tr class="notes-table-header">
+                            <th>Advantages</th>
+                            <th>Disadvantages</th>
+                        </tr>
+                        <tr>
+                            <td class="notes-table-data-pro">
+                                <ul>
+                                    <li>Very precise and clean cuts</li>
+                                    <li>Can cut a wide range of materials</li>
+                                    <li>Minimal material wastage</li>
+                                </ul>
+                            </td>
+                            <td class="notes-table-data-con">
+                                <ul>
+                                    <li>Can be expensive for small-scale production</li>
+                                    <li>Heat-affected zone can deform certain materials</li>
+                                </ul>
+                            </td>
+                        </tr>
+                    </table>
+                    <h3><b>Uses: </b>Metal fabrication, sign making, custom parts<br><br></h3>
+
+                    <h3 id="Creasing"><b><u>Creasing:</b></u></h3>
+                    <h3>
+                        <p><b>How it works:</b></p>
+                        <ul>
+                            <li>Creasing involves making an indentation or fold line in a material without cutting through it.</li>
+                            <li>This is usually done with a die or press to create a clean, straight line for folding.</li>
+                        </ul>
+                    </h3>
+                    <table>
+                        <tr class="notes-table-header">
+                            <th>Advantages</th>
+                            <th>Disadvantages</th>
+                        </tr>
+                        <tr>
+                            <td class="notes-table-data-pro">
+                                <ul>
+                                    <li>Helps create sharp, accurate folds</li>
+                                    <li>Prevents cracking of materials during folding</li>
+                                    <li>Improves the overall appearance of folded products</li>
+                                </ul>
+                            </td>
+                            <td class="notes-table-data-con">
+                                <ul>
+                                    <li>Not suitable for all materials</li>
+                                    <li>Requires precise die adjustment</li>
+                                </ul>
+                            </td>
+                        </tr>
+                    </table>
+                    <h3><b>Uses: </b>Packaging, greeting cards, brochures<br><br></h3>
+
+                    <h3 id="Bending"><b><u>Bending:</b></u></h3>
+                    <h3>
+                        <p><b>How it works:</b></p>
+                        <ul>
+                            <li>Bending involves applying force to a material to change its shape without breaking it.</li>
+                            <li>Typically done using machines like press brakes or rollers to bend materials such as metal, plastic, or paper.</li>
+                        </ul>
+                    </h3>
+                    <table>
+                        <tr class="notes-table-header">
+                            <th>Advantages</th>
+                            <th>Disadvantages</th>
+                        </tr>
+                        <tr>
+                            <td class="notes-table-data-pro">
+                                <ul>
+                                    <li>Can create complex shapes with minimal material wastage</li>
+                                    <li>Cost-effective for mass production</li>
+                                    <li>Requires less energy compared to other methods</li>
+                                </ul>
+                            </td>
+                            <td class="notes-table-data-con">
+                                <ul>
+                                    <li>Can cause material deformation if not done correctly</li>
+                                    <li>Not suitable for very thick materials</li>
+                                </ul>
+                            </td>
+                        </tr>
+                    </table>
+                    <h3><b>Uses: </b>Metal parts, automotive, structural components<br><br></h3>
+
+                
+                    </h3>
+
+                    <div class="notes-content">
+                        <div class="notes-content-intro">
+<!-- 
+                            <h3><b>Topic test:</b></h3>
+
+                            This is a comment div class="blurbox" style="background-color: #bdbdbd;">
+                                <a href="\documents\Q&A\processes_techniques_special_tools_exercises\&A.pdf">Metal processes Questions</a>
+                            </div> -->
                         </div>
                     </div>
+
+                    <script src="/footer.js"></script>
+
                 </div>
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Classification of materials</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Methods for investigating and testing materials</a>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-
-        <script src="../../../../../../../footer.js"></script>
-    </div>
-    <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
-</body>
-<script src="../../../../../../../script.js"></script>
-</html>
+                <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
+            </body>
+        <script src="/script.js"></script>
+    </html>
